--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: {{ include "clinic-scheduler.name" . }}
     spec:
+      automountServiceAccountToken: false
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
